<resources>
    <string name="app_name">The Movie Manager</string>

    <string name="login_with_email">Login with Email</string>
    <string name="login_title">The Movie Manager</string>
    <string name="login_hint_email">Email</string>
    <string name="login_hint_password">Password</string>
    <string name="login_button">Login</string>
    <string name="login_text_or">OR</string>
    <string name="login_button_website">Login via Website</string>
    <string name="login_info">This product uses TMDb API but it is not endorsed or certified by TMDb</string>

    <string name="search">Search</string>

    <string name="detail_toast_add_favorite">Added to the favorites!</string>
    <string name="detail_toast_add_watchlist">Added to the watchlist!</string>
    <string name="detail_toast_remove_favorite">Removed from the favorites!</string>
    <string name="detail_toast_remove_watchlist">Removed from the watchlist!</string>

    <string name="error_no_movie_found">No Movie Found :(</string>
    <string name="error_no_movie_found_in_watchlist">Add some movies to the watchlist!</string>
    <string name="error_no_movie_found_in_favorites">Add some movies to the favorites!</string>

    <string name="error_login_password_uppercase">The password must include an uppercase character</string>
    <string name="error_login_password_length">The password must be 6 character</string>
    <string name="error_login_password_digit">The password must include a digit</string>
    <string name="error_login_no_email">The email is not valid</string>
    <string name="error_text_empty">Search to find best movies!</string>

    <string name="dummy_email">dummy@gmail.com</string>
    <string name="dummy_movie_title">Spider-Man: No Way Home (2021)</string>
    <string name="dummy_movie_average_point">8.8</string>
    <string name="dummy_movie_overview">Peter Parker is unmasked and no longer able to separate his normal life from the high-stakes of being a super-hero.
        When he asks for help from Doctor Strange the stakes become even more dangerous, forcing him to discover what it truly means to be Spider-Man.</string>

</resources>
